libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/type-generic-duplicate.jsonc
//@ run: fail
//@ description: Duplicate generic constraints should be rejected
[
  "::kernel::special_form::type",
  "Foo<T: Integer, T>",
  //~^ ERROR duplicate generic parameter `T`
  { "#struct": { "foo": "Integer" } },
  "_"
]
